--- a/proxy/src/main/resources/messages.properties
+++ b/proxy/src/main/resources/messages.properties
@@ -1,21 +1,21 @@
-alert=\u00a78[\u00a74Alert\u00a78]\u00a7r 
-already_connected=\u00a7cYou are already connected to this server!
-already_connected_proxy=\u00a7cYou are already connected to this proxy!
-already_connecting=\u00a7cAlready connecting to this server!
+alert=\u00a76\u00a7lChina2B2T \u00a7r\u00a7e> \u00a7r
+already_connected=\u00a76You are already connected to this server!
+already_connected_proxy=\u00a76You are already connected to this proxy!
+already_connecting=\u00a76Already connecting to this server!
 command_list=\u00a7a[{0}] \u00a7e({1}): \u00a7r{2}
-connect_kick=\u00a7cKicked whilst connecting to {0}: {1}
+connect_kick=\u00a76Could not connect to {0} \n \u00a7r{1} \n \u00a76Find out more: \u00a7l\u00a7nhttps://github.com/China2B2T/Feedback
 current_server=\u00a76You are currently connected to {0}.
-fallback_kick=\u00a7cCould not connect to a default or fallback server, please try again later: {0}
+fallback_kick=\u00a76Could not connect to server \n \u00a7r\u00a7eReason: {0} \n \u00a76Find out more: \u00a7l\u00a7nhttps://github.com/China2B2T/Feedback
 fallback_lobby=\u00a7cCould not connect to target server, you have been moved to a fallback server.
-lost_connection=[Proxy] Lost connection to server.
-mojang_fail=Error occurred while contacting login servers, are they down?
+lost_connection=\u00a76Lost connection to server. (LOST_CONNECTION)
+mojang_fail=\u00a76Lost connection to server. (MOJANG_FAIL)
 no_permission=\u00a7cYou do not have permission to execute this command!
 no_server=\u00a7cThe specified server does not exist.
 no_server_permission=\u00a7cYou don''t have permission to access this server.
-outdated_client=Outdated client! Please use {0}
-outdated_server=Outdated server! I''m still on {0}
-proxy_full=Server is full!
-restart=[Proxy] Proxy restarting.
+outdated_client=\u00a76Please use {0}
+outdated_server=\u00a76Please use {0}
+proxy_full=\u00a76Server is full!
+restart=\u00a76Proxy restarting.
 server_kick=[Kicked] 
 server_list=\u00a76You may connect to the following servers at this time: 
 server_went_down=\u00a7cThe server you were previously on went down, you have been connected to a fallback server
