--- a/proxy/src/main/resources/messages.properties
+++ b/proxy/src/main/resources/messages.properties
@@ -1,12 +1,13 @@
-alert=\u00a76\u00a7lChina2B2T \u00a7r\u00a7e> \u00a7r
+alert=\u00a76\u00a7lAlert \u00a7r\u00a7e> \u00a7r
 already_connected=\u00a76You are already connected to this server!
 already_connected_proxy=\u00a76You are already connected to this proxy!
 already_connecting=\u00a76Already connecting to this server!
 command_list=\u00a7a[{0}] \u00a7e({1}): \u00a7r{2}
-connect_kick=\u00a76Could not connect to {0} \n \u00a7r{1} \n \u00a76Find out more: \u00a7l\u00a7nhttps://github.com/China2B2T/Feedback
+connect_kick=\u00a76Could not connect to {0} \n \u00a7r{1}
 current_server=\u00a76You are currently connected to {0}.
-fallback_kick=\u00a76Could not connect to server \n \u00a7r\u00a7eReason: {0} \n \u00a76Find out more: \u00a7l\u00a7nhttps://github.com/China2B2T/Feedback
+fallback_kick=\u00a76Could not connect to server \n \u00a7r\u00a7eReason: {0}
 fallback_lobby=\u00a7cCould not connect to target server, you have been moved to a fallback server.
+timeout=\u00a76Server not reachable. Offline? Incorrectly configured address/port/firewall?
 lost_connection=\u00a76Lost connection to server. (LOST_CONNECTION)
 mojang_fail=\u00a76Lost connection to server. (MOJANG_FAIL)
 no_permission=\u00a7cYou do not have permission to execute this command!
@@ -38,3 +39,4 @@ you_got_summoned=\u00a76Summoned to {0} by {1}
 command_perms_groups=\u00a76You have the following groups: {0}
 command_perms_permission=\u00a79- {0}
 command_ip=\u00a79IP of {0} is {1}
+illegal_chat_characters=\u00a76Illegal characters in chat ({0})
